# Plugin

./: .gitignore  README.md  build.sh  opensceneryx.lua
docker/: Dockerfile  Makefile  README.md  build.sh
src/: CMakeLists.txt  OpenSceneryX.cpp  OpenSceneryX.h
